Fix css and contrast issues on index.html

--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -10,19 +10,58 @@
     position: relative;
     background-size: cover;
     background-position: center;
-
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
 }
 
 .hero-text {
+    height: auto;
+    width: 400px;
     font-size: x-large;
-    color: white;
+    color: black;
     font-weight: bold;
     text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+    background-color: rgba(236, 237, 244, 0.7);
+    border-radius: 15px;
+    box-shadow: 0 0 5px 20px rgba(236, 237, 244, 0.7);
+    
+    
+    /* Animation for hero text*/
+    animation-name: show-hero-text;
+    animation-duration: 7s;
+    animation-fill-mode: forwards;
+    animation-delay: 2s;
 }
+
+@keyframes show-hero-text {
+    from {
+        opacity: 0;
+        transform: scale(0);
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        
+
+    }
+}
+
 
 /* Css for find us section*/
 
@@ -33,10 +72,29 @@
 }
 
 .find-us {
-    font-size: larger;
+    font-size: xx-large;
     color: black;
     
 } 
+
+/* Css for mailchimp newsletter sign up */
+#mc_embed_signup {
+    background: #fff;
+    clear: left;
+    font: 14px Helvetica, Arial, sans-serif;
+    width: 500px;
+    
+}
+
+#mc-embedded-subscribe {
+    color: black !important;
+    
+}
+
+#mc_embed_signup .indicates-required, .mc-field-group label {
+    font-size: 17px !important;
+    color: black !important;
+}
 
 
 /* Google map css*/
